--- a/test/fixtures/issue_extensions_status_flows.yml
+++ b/test/fixtures/issue_extensions_status_flows.yml
@@ -1,39 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-one:
+issue_extensions_status_flows001:
   id: 1
-
   project_id: 1
-
-  tracker_id: 1
-
+  tracker_id: 0
   old_status_id: 1
-
-  new_status_id: 1
-
-  role_id: 1
-
+  new_status_id: 2
+  role_id: 0
   updated_by: 1
-
   created_at: 2010-07-02 07:34:36
-
   updated_at: 2010-07-02 07:34:36
-
-two:
-  id: 2
-
-  project_id: 1
-
-  tracker_id: 1
-
-  old_status_id: 1
-
-  new_status_id: 1
-
-  role_id: 1
-
-  updated_by: 1
-
-  created_at: 2010-07-02 07:34:36
-
-  updated_at: 2010-07-02 07:34:36
-
